--- a/services/order-service/Dockerfile
+++ b/services/order-service/Dockerfile
@@ -1,8 +1,15 @@
 # Dockerfile
 FROM node:16
+
 WORKDIR /app
+
 COPY package*.json ./
 RUN npm install
+
 COPY . .
-EXPOSE 3001 
+
+WORKDIR /app/services/order-service
+
+EXPOSE 3003
+
 CMD ["node", "index.js"]
