--- a/services/user-service/Dockerfile
+++ b/services/user-service/Dockerfile
@@ -1,8 +1,18 @@
 # Dockerfile
 FROM node:16
+
 WORKDIR /app
+
+# Copy root package.json and install dependencies for all services
 COPY package*.json ./
 RUN npm install
+
+# Copy only the source code (thanks to .dockerignore we skip node_modules)
 COPY . .
-EXPOSE 3003
+
+# Switch to this service's folder as the working directory
+WORKDIR /app/services/user-service
+
+EXPOSE 3001
+
 CMD ["node", "index.js"]
