--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -10,7 +10,8 @@ services:
 
   users:
     build:
-      context: ./user-service
+      context: ..
+      dockerfile: ./services/user-service/Dockerfile
     container_name: users_service
     ports:
       - "3001:3001"
@@ -21,7 +22,8 @@ services:
 
   products:
     build:
-      context: ./product-service
+      context: ..
+      dockerfile: ./services/product-service/Dockerfile
     container_name: products_service
     ports:
       - "3002:3002"
@@ -32,7 +34,8 @@ services:
 
   orders:
     build:
-      context: ./order-service
+      context: ..
+      dockerfile: ./services/order-service/Dockerfile
     container_name: orders_service
     ports:
       - "3003:3003"
