--- a/package.json
+++ b/package.json
@@ -7,15 +7,19 @@
     "user-service": "node services/user-service/index.js",
     "product-service": "node services/product-service/index.js",
     "order-service": "node services/order-service/index.js",
+    "auth-service": "node services/auth-service/index.js",
     "dev:user-service": "nodemon services/user-service/index.js",
     "dev:product-service": "nodemon services/product-service/index.js",
-    "dev:order-service": "nodemon services/order-service/index.js"
+    "dev:order-service": "nodemon services/order-service/index.js",
+    "dev:auth-service": "nodemon services/auth-service/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.2",
-    "mongoose": "^8.8.0"
+    "mongoose": "^8.8.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
