--- a/services/docker-compose.yml
+++ b/services/docker-compose.yml
@@ -44,5 +44,19 @@ services:
     depends_on:
       - mongodb
 
+  auth:
+    build:
+      context: ..
+      dockerfile: ./services/auth-service/Dockerfile
+    container_name: auth_service
+    ports:
+      - "3004:3004"
+    environment:
+      - MONGODB_URI=mongodb://mongodb:27017/auth_db
+      - JWT_SECRET=dev_jwt_secret_change_me
+      - JWT_EXPIRES_IN=1h
+    depends_on:
+      - mongodb
+
 volumes:
   mongodb_data:
